kubernetes/apps/homepage/app/ingress-internal.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: homepage-internal
  namespace: homepage
spec:
  ingressClassName: nginx
  rules:
    - host: homepage.${internal_domain}
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: homepage
                port:
                  number: 3000
